update a few things

--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
     </script>
   </head>
   <body>
-    <main>
-      <section id="imageContainer">
-        <img src="./christiantoney.jpg" />
-      </section>
-      <h1>Christian Toney</h1>
-      <p>Over the years, I have taken on many leadership roles, including working with Ford Motor Company as a software engineering intern and working with the Detroit Area Pre-College Engineering Program (DAPCEP) as a panelist to show middle and high school students some opprotunities about working in the STEM field.</p>
-      <p>Wherever I go, I aim to be an active contributor to my community. I currently serve as the President for Central Michigan University's Residence Housing Association and the Senate Leader for CMU's Student Government Association. When I'm home, I usually volunteer with my mom around the city.</p>
-      <p>I specialize in computer programming, illustration, music composition, writing, filmmaking, and voice acting. I'm working on a game with some friends at Beastslash — it's called The Showrunners!</p>
-      <p>I'm currently studying Computer Science at Central Michigan University. After that, I plan to attend law school to study intellectual property law.</p>
-      <p>In my free time, I like playing my electric guitar, listening to podcasts, and watching cartoons. LittleBigPlanet is my all-time favorite.</p>
-    </main>
-    <footer>
-      <section id="contactContainer">
-        <b>Let's get in touch</b>
-        <ul id="contact">
+    <section>
+      <main>
+        <section id="imageContainer">
+          <img src="./christiantoney.jpg" />
+        </section>
+        <h1>Christian Toney</h1>
+        <p>Over the years, I have taken on many leadership roles, including working with Ford Motor Company as a software engineering intern and working with the Detroit Area Pre-College Engineering Program (DAPCEP) as a panelist to show middle and high school students some opprotunities about working in the STEM field.</p>
+        <p>Wherever I go, I aim to be an active contributor to my community. I currently serve as the President for Central Michigan University's Residence Housing Association and the Senate Leader for CMU's Student Government Association. When I'm home, I usually volunteer with my mom around the city.</p>
+        <p>I specialize in computer programming, illustration, music composition, writing, filmmaking, and voice acting. I'm working on a game with some friends at Beastslash — it's called The Showrunners!</p>
+        <p>I'm currently studying Computer Science at Central Michigan University. After that, I plan to attend law school to study intellectual property law.</p>
+        <p>In my free time, I like playing my electric guitar, listening to podcasts, and watching cartoons. LittleBigPlanet is my all-time favorite.</p>
+      </main>
+      <footer>
+        <section id="contactContainer">
+          <b>Let's get in touch</b>
+          <ul id="contact">
 
-        </ul>
-      </section>
-      <p>© 2023 Christian Toney</p>
-    </footer>
+          </ul>
+        </section>
+        <p>© 2023 Christian Toney</p>
+      </footer>
+    </section>
   </body>
 </html>
