--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           ["Instagram", "https://instagram.com/christian.toney"],
           ["Bluesky", "https://bsky.app/profile/christiantoney.com"],
           ["GitHub", "https://github.com/Sudobeast"], 
+          ["TikTok", "https://tiktok.com/@christian.toney"],
           ["Email", "mailto:hey@christiantoney.com"]
         ];
 
@@ -44,7 +45,7 @@
         <p>Wherever I go, I aim to be an active contributor to my community. I currently serve as the President for Central Michigan University's Residence Housing Association and the Senate Leader for CMU's Student Government Association. When I'm home, I usually volunteer with my mom around the city.</p>
         <p>I specialize in computer programming, illustration, music composition, writing, filmmaking, and voice acting. I'm working on a game with some friends at Beastslash — it's called The Showrunners!</p>
         <p>I'm currently studying Computer Science at Central Michigan University. After that, I plan to attend law school to study intellectual property law.</p>
-        <p>In my free time, I like playing my electric guitar, listening to podcasts, and watching cartoons. LittleBigPlanet is my all-time favorite.</p>
+        <p>In my free time, I like watching cartoons, listening to podcasts, and playing games. LittleBigPlanet is my all-time favorite.</p>
       </main>
       <footer>
         <section id="contactContainer">
