--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           ["LinkedIn", "https://linkedin.com/in/christiantoney"],
           ["Instagram", "https://instagram.com/christian.toney"],
           ["Bluesky", "https://bsky.app/profile/christiantoney.com"],
-          ["GitHub", "https://github.com/Sudobeast"], 
+          ["GitHub", "https://github.com/Christian-Toney"], 
           ["TikTok", "https://tiktok.com/@christian.toney"],
           ["Email", "mailto:hey@christiantoney.com"]
         ];
