--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           </ul>
         </section>
-        <p>© 2023 Christian Toney</p>
+        <p>© 2023 – 2024 Christian Toney</p>
       </footer>
     </section>
   </body>
