--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <h1>Christian Toney</h1>
         <p>Over the years, I have taken on many leadership roles, including working with Ford Motor Company as a software engineering intern and working with the Detroit Area Pre-College Engineering Program (DAPCEP) as a panelist to show middle and high school students some opportunities about working in the STEM field.</p>
-        <p>Wherever I go, I aim to be an active contributor to my community. I currently serve as the President for Central Michigan University's Residence Housing Association and the Senate Leader for CMU's Student Government Association. When I'm home, I usually volunteer with my mom around the city.</p>
+        <p>Wherever I go, I aim to be an active contributor to my community. I have recently served as the President for Central Michigan University's Residence Housing Association and the Senate Leader for CMU's Student Government Association. When I'm home, I usually volunteer with my mom around the city.</p>
         <p>I specialize in computer programming, illustration, music composition, writing, filmmaking, and voice acting. I'm working on a game with some friends at Beastslash — it's called The Showrunners!</p>
         <p>I'm currently studying Computer Science at Central Michigan University. After that, I plan to attend law school to study intellectual property law.</p>
         <p>In my free time, I like watching cartoons, listening to podcasts, and playing games. LittleBigPlanet is my all-time favorite.</p>
