--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         const contactLinkInfo = [
           ["LinkedIn", "https://linkedin.com/in/christiantoney"],
           ["Instagram", "https://instagram.com/christian.toney"],
+          ["SoundCloud", "https://soundcloud.com/christian_toney"],
           ["Bluesky", "https://bsky.app/profile/christiantoney.com"],
           ["GitHub", "https://github.com/Christian-Toney"], 
-          ["TikTok", "https://tiktok.com/@christian.toney"],
           ["Email", "mailto:hey@christiantoney.com"]
         ];
 
@@ -54,7 +54,7 @@
 
           </ul>
         </section>
-        <p>© 2023 – 2024 Christian Toney</p>
+        <p>© 2023 – 2025 Christian Toney</p>
       </footer>
     </section>
   </body>
